# 410health

./: .env.example  .gitattributes  .gitignore  GPU鍔犻€熷凡瀹屾垚.md  GitHub备份上传方案.md  MANIFEST.md  README.md  VERSION_HISTORY.md  WRISTBAND_FIX_SUMMARY.md  camera_service_standalone.py  environment.txt  implementation_plan.md  mobile.md  pyproject.toml  requirements-behavior-poc.txt  requirements-identity.txt  requirements.txt  run.py  setup.md  shouhuan.py  test_camera_display.html  test_cosy.py  tree.json  windows-invalid-paths-not-copied.txt  启动后端.bat  快速修复串口.md  摄像头推理加速-已优化.md  摄像头系统最终状态.md  摄像头视频流问题解决方案.md  摄像头问题最终总结.md  涓插彛闂瀹屾暣瑙ｅ喅鏂规.md  鎽勫儚澶翠紭鍖栧畬鎴愭€荤粨.md
66/: .env.example  .gitignore  README.md  setup.md  摄像头优化快速指南.md
agent/: __init__.py  agent_service.py  analysis_service.py  community_langgraph_agent.py  context_assembler.py  data_analysis.py  langchain_rag_service.py  langgraph_health_agent.py  model_interfaces.py  prompt_templates.py  prompting.py  rag_service.py  response_normalizer.py
ai/: __init__.py  anomaly_detector.py  data_generator.py  health_score_model.py
app/: __init__.py  main.py
backend/: __init__.py  config.py  dependencies.py  logger.py  main.py  runtime_bootstrap.py  serial_runtime_lock.py
camera_runtime_external/: CAMERA_BEGINNER_GUIDE.md  CAMERA_FULL_HANDOFF_2026-05-05.md  README.md  camera_link_probe.ps1  camera_live_config.json  camera_live_config.runtime.json  camera_matrix_probe.py  camera_probe_xstrive.py  camera_runtime_serviceization.md  camera_runtime_start.ps1  camera_runtime_stop.ps1  camera_scan_subnet.ps1  (+3 more)
docker/: Dockerfile  (+1 more)
(+1250 files in other folders)
